# autorac

./: .gitignore  26_USC_1_VALIDATION_REPORT.md  26_usc_1_validation.csv  CLAUDE.md  README.md  calibration_data.json  pyproject.toml
.github/workflows/: ci.yml
migrations/: 001_create_autorac_tables.sql  001_encoding_runs.sql  002_agent_transcripts.sql  003_sdk_sessions.sql
scripts/: encode_with_logging.py  extract_usc_section.py
src/autorac/: __init__.py  checks.py  cli.py  constants.py  supabase_sync.py
src/autorac/harness/: __init__.py  backends.py  encoder_harness.py  encoding_db.py  experiment_db.py  metrics.py  orchestrator.py  sdk_orchestrator.py  validator_pipeline.py
src/autorac/prompts/: __init__.py  encoder.py  reviewers.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_compilation.py  test_encoder_backend.py  test_encoder_harness.py  test_encoding_db.py  test_experiment_db.py  test_metrics.py  test_orchestrator_context.py  test_parallel_encoding.py  test_param_check.py  test_sdk_orchestrator.py  test_supabase_sync.py  test_validator_pipeline.py
