[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorac"
version = "0.1.0"
description = "AI-assisted RAC encoding infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Cosilico AI", email = "team@cosilico.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic",
    "pyyaml",
    "requests",
    "sqlite-utils",
]

# Note: Uses Claude Code CLI (subprocess) for agent calls - no anthropic SDK needed.
# Claude Code must be installed: npm install -g @anthropic-ai/claude-code

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
autorac = "autorac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autorac"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
