[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorac"
version = "0.1.0"
description = "AI-assisted RAC encoding infrastructure"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Rules Foundation", email = "info@rules.foundation" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic",
    "pyyaml",
    "requests",
    "sqlite-utils",
    "supabase>=2.0.0",
]

# Note: Uses Claude Code CLI (subprocess) by default - no anthropic SDK needed.
# Claude Code must be installed: npm install -g @anthropic-ai/claude-code
#
# For parallel encoding via API, install with: pip install autorac[sdk]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
all = [
    "autorac[sdk,dev]",
]

[project.scripts]
autorac = "autorac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autorac"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/autorac --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/autorac/supabase_sync.py" = ["F821"]
